# dx11_triangle

./: CMakeLists.txt  main.c  rectangle.hlsl
shaders/: circle.hlsl  linelist_primitive.hlsl  triangle.hlsl
